[package]
name = "imonline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autopilot = "0.4.0"
rand = "0.8.5"
signal-hook = "0.3.17"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = "0.7.10"
windows = { version = "0.52.0", features = ["Win32_System_Power"] }
